==> cherry-embedded/CherryUSB/port/stm32/usb_dc_hal.c <==
#include "stm32f1xx_hal.h" //chanage this header for different soc
#include "usbd_core.h"
#define USB_RAM_SIZE 512
#define USB_NUM_BIDIR_ENDPOINTS 8
#define EP0_MPS 64U
#define EP_MPS  64U
#define USB_BTABLE_SIZE (8 * USB_NUM_BIDIR_ENDPOINTS)
#define USB_OTG_MAX_EP0_SIZE 64
#define EP0_MPS USB_OTG_MAX_EP0_SIZE
#define USB_OTG_HS_MAX_PACKET_SIZE 512
#define EP_MPS USB_OTG_HS_MAX_PACKET_SIZE
#define USB_OTG_FS_MAX_PACKET_SIZE 64
#define EP_MPS USB_OTG_FS_MAX_PACKET_SIZE
#define FIFO_NUM      (1 + USB_NUM_BIDIR_ENDPOINTS)
#define FIFO_WORDS    (USB_RAM_SIZE / 4)
#define FIFO_EP_WORDS (FIFO_WORDS / FIFO_NUM)

int usb_dc_init(void)
{
    HAL_StatusTypeDef status;
    unsigned int i;

    /*pcd has init*/
    status = HAL_PCD_Start(&hpcd_USB_FS);
    if (status != HAL_OK) {
        return -2;
    }

    usb_dc_pcd_state.out_ep_state[0].ep_mps = EP0_MPS;
    usb_dc_pcd_state.out_ep_state[0].ep_type = EP_TYPE_CTRL;
    usb_dc_pcd_state.in_ep_state[0].ep_mps = EP0_MPS;
    usb_dc_pcd_state.in_ep_state[0].ep_type = EP_TYPE_CTRL;

#ifdef USB
    /* Start PMA configuration for the endpoints after the BTABLE. */
    usb_dc_pcd_state.pma_offset = USB_BTABLE_SIZE;
#else /* USB_OTG_FS */
    /* TODO: make this dynamic (depending usage) */
    HAL_PCDEx_SetRxFiFo(&hpcd_USB_FS, FIFO_EP_WORDS);
    for (i = 0U; i < USB_NUM_BIDIR_ENDPOINTS; i++) {
        HAL_PCDEx_SetTxFiFo(&hpcd_USB_FS, i,
                            FIFO_EP_WORDS);
    }
#endif /* USB */
    return 0;
}

int usbd_set_address(const uint8_t addr)
{
    HAL_StatusTypeDef status;

    status = HAL_PCD_SetAddress(&hpcd_USB_FS, addr);
    if (status != HAL_OK) {
        return -2;
    }

    return 0;
}

int usbd_ep_open(const struct usbd_endpoint_cfg *ep_cfg)
{
    HAL_StatusTypeDef status;
    uint8_t ep = ep_cfg->ep_addr;
    struct usb_dc_ep_state *ep_state = usb_dc_stm32_get_ep_state(ep);

    if (!ep_state) {
        return -1;
    }

#ifdef USB
    if (ep_cfg->ep_mps > ep_state->ep_pma_buf_len) {
        if (USB_RAM_SIZE <=
            (usb_dc_pcd_state.pma_offset + ep_cfg->ep_mps)) {
            return -1;
        }
        HAL_PCDEx_PMAConfig(&hpcd_USB_FS, ep, PCD_SNG_BUF,
                            usb_dc_pcd_state.pma_offset);
        ep_state->ep_pma_buf_len = ep_cfg->ep_mps;
        usb_dc_pcd_state.pma_offset += ep_cfg->ep_mps;
    }
#endif
    ep_state->ep_mps = ep_cfg->ep_mps;

    switch (ep_cfg->ep_type) {
        case USB_DC_EP_CONTROL:
            ep_state->ep_type = EP_TYPE_CTRL;
            break;
        case USB_DC_EP_ISOCHRONOUS:
            ep_state->ep_type = EP_TYPE_ISOC;
            break;
        case USB_DC_EP_BULK:
            ep_state->ep_type = EP_TYPE_BULK;
            break;
        case USB_DC_EP_INTERRUPT:
            ep_state->ep_type = EP_TYPE_INTR;
            break;
        default:
            return -1;
    }

    status = HAL_PCD_EP_Open(&hpcd_USB_FS, ep,
                             ep_state->ep_mps, ep_state->ep_type);
    if (status != HAL_OK) {
        return -1;
    }

    if (USB_EP_DIR_IS_OUT(ep) && ep != USB_CONTROL_OUT_EP0) {
        return HAL_PCD_EP_Receive(&hpcd_USB_FS, ep,
                                  usb_dc_pcd_state.ep_buf[USB_EP_GET_IDX(ep)],
                                  EP_MPS);
    }
    return 0;
}

int usbd_ep_set_stall(const uint8_t ep)
{
    struct usb_dc_ep_state *ep_state = usb_dc_stm32_get_ep_state(ep);
    HAL_StatusTypeDef status;

    if (!ep_state) {
        return -1;
    }

    status = HAL_PCD_EP_SetStall(&hpcd_USB_FS, ep);
    if (status != HAL_OK) {
        return -2;
    }

    ep_state->ep_stalled = 1U;

    return 0;
}

int usbd_ep_clear_stall(const uint8_t ep)
{
    struct usb_dc_ep_state *ep_state = usb_dc_stm32_get_ep_state(ep);
    HAL_StatusTypeDef status;

    if (!ep_state) {
        return -1;
    }

    status = HAL_PCD_EP_ClrStall(&hpcd_USB_FS, ep);
    if (status != HAL_OK) {
        return -2;
    }

    ep_state->ep_stalled = 0U;
    ep_state->read_count = 0U;

    return 0;
}

int usbd_ep_write(const uint8_t ep, const uint8_t *data, uint32_t data_len, uint32_t *ret_bytes)
{
    struct usb_dc_ep_state *ep_state = usb_dc_stm32_get_ep_state(ep);
    HAL_StatusTypeDef status;
    int ret = 0;

    if (!ep_state || !USB_EP_DIR_IS_IN(ep)) {
        return -1;
    }

    if (ep == USB_CONTROL_IN_EP0 && data_len > 64) {
        data_len = 64;
    }

    status = HAL_PCD_EP_Transmit(&hpcd_USB_FS, ep,
                                 (void *)data, data_len);
    if (status != HAL_OK) {
        ret = -2;
    }

    if (!ret && ep == USB_CONTROL_IN_EP0 && data_len > 0) {
        /* Wait for an empty package as from the host.
		 * This also flushes the TX FIFO to the host.
		 */
        status = HAL_PCD_EP_Receive(&hpcd_USB_FS, ep,
                                    usb_dc_pcd_state.ep_buf[USB_EP_GET_IDX(ep)],
                                    0);
        if (status != HAL_OK) {
            return -2;
        }
    }

    if (!ret && ret_bytes) {
        *ret_bytes = data_len;
    }

    return ret;
}

int usbd_ep_read(const uint8_t ep, uint8_t *data, uint32_t max_data_len, uint32_t *read_bytes)
{
    struct usb_dc_ep_state *ep_state = usb_dc_stm32_get_ep_state(ep);
    uint32_t read_count;
    HAL_StatusTypeDef status;

    if (!ep_state) {
        return -1;
    }
    if (!USB_EP_DIR_IS_OUT(ep)) { /* check if OUT ep */

        return -1;
    }
    if (!data && max_data_len) {
        return -1;
    }

    ep_state->read_count = HAL_PCD_EP_GetRxCount(&hpcd_USB_FS, ep);
    ep_state->read_offset = 0U;
    read_count = ep_state->read_count;

    if (max_data_len == 0) {
        /* If no more data in the buffer, start a new read transaction.
	 * DataOutStageCallback will called on transaction complete.
	 */
        if (!ep_state->read_count) {
            status = HAL_PCD_EP_Receive(&hpcd_USB_FS, ep,
                                        usb_dc_pcd_state.ep_buf[USB_EP_GET_IDX(ep)],
                                        EP_MPS);
            if (status != HAL_OK) {
                return -2;
            }
        }
        return 0;
    }
    /* When both buffer and max data to read are zero, just ingore reading
	 * and return available data in buffer. Otherwise, return data
	 * previously stored in the buffer.
	 */
    if (data) {
        read_count = MIN(read_count, max_data_len);
        memcpy(data, usb_dc_pcd_state.ep_buf[USB_EP_GET_IDX(ep)] + ep_state->read_offset, read_count);
        ep_state->read_count -= read_count;
        ep_state->read_offset += read_count;
    }

    /* If no more data in the buffer, start a new read transaction.
	 * DataOutStageCallback will called on transaction complete.
	 */
    if (!ep_state->read_count) {
        status = HAL_PCD_EP_Receive(&hpcd_USB_FS, ep,
                                    usb_dc_pcd_state.ep_buf[USB_EP_GET_IDX(ep)],
                                    EP_MPS);
        if (status != HAL_OK) {
            return -2;
        }
    }
    if (read_bytes) {
        *read_bytes = read_count;
    }

    return 0;
}
